derive/tests/ui/from_self.stderr
error: Use `From<Self>` instead of `From<Bar>`
 --> tests/ui/from_self.rs:5:22
  |
5 |     #[indexland(omit(From<Bar>))]
  |                      ^^^^
